Fix margins
Fix margins that  are causing layout breaks for larger font sizes

--- a/style.css
+++ b/style.css
@@ -89,10 +89,12 @@ footer.container {
 
 @media (min-width: 765px) {
 
-  .logo-container,
+  .logo-container {
+    margin-left: 3em;
+  }
+
   .nav-list {
-    padding: .5em .9em;
-    margin: 0 3em;
+    margin-right: 3em;
   }
 }
 
@@ -222,7 +224,7 @@ main.container>h2 {
 }
 
 main.container p {
-  font-size: 18px;
+  font-size: 1.125rem;
   margin-bottom: 1.25rem;
   margin-top: -0.3em;
 
